--- a/src/App.css
+++ b/src/App.css
@@ -1,74 +1,13 @@
+body {
+  font-family: Arial, sans-serif;
+  background-color: #e3e4ec;
+  margin: 0;
+  padding: 0;
+}
 
 .App {
-  width: 90%;
-  margin: 20px auto;
-}
-
-.dashboard {
-  /* display: flex;
-  flex-direction: row;
-  flex-wrap: wrap; */
-  justify-content: space-between;
-}
-
-.category {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 15px;
-  margin: 10px 0;
-  flex-basis: 48%;
-}
-
-.widgets {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;  /* Add gap between widgets */
-}
-
-.widget {
-  background-color: #e9ecef;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  flex: 1 1 48%;  /* Adjust to allow flexible layout */
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.remove-button {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  background-color: #dc3545;
-  border: none;
-  color: white;
-  cursor: pointer;
-}
-
-.add-widget-form, .add-category-form, .search-bar {
-  display: block;
-  margin: 10px 0;
-}
-
-input[type="text"] {
   width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-}
-
-button {
-  padding: 10px 15px;
-  background-color: #007bff;
-  border: none;
-  color: white;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-button:hover {
-  background-color: #0056b3;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
